# tailscale-python-client

./: CLAUDE.md  LICENSE  README.md  example.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: examples.md  methods.md
examples/: acl-example.py  logs-example.py
tailscale_agent/: tailscale.py  tailscale_agent.py
tests/: test_smoke.py  test_tailscale_agent.py
