[tool.poetry]
name = "tailscale_agent"
version = "0.1.0"
description = ""
authors = ["Kevin Bringard <kevin.bringard@phreesia.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tailscale = "^0.2.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
