[tool.poetry]
name = "tailscale_agent"
version = "0.2.0"
description = "Python Bindings for the TailScal API"
authors = ["Kevin Bringard <kevin.bringard@phreesia.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/kevinbringard/tailscale-python-client/"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
