[tool.poetry]
name = "tailscale_agent"
version = "0.7.0"
description = "Python Bindings for the TailScal API"
authors = ["Kevin Bringard <kevin.bringard@phreesia.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/kevinbringard/tailscale-python-client/"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.27.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.pytest.ini_options]
markers = [
    "smoke: live API smoke tests, require OAuth credentials (deselect with '-m not smoke')",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
